force-app/main/default/objects/NEPA_Circuit_Risk_Weight__mdt.object
<CustomObject>
    <description>Per-circuit litigation risk weights seeded from PermitTEC v0.1 corpus. Used by the Litigation Risk Scoring Flow to weight the geographic component of the composite score.</description>
    <label>NEPA Circuit Risk Weight</label>
    <pluralLabel>NEPA Circuit Risk Weights</pluralLabel>
    <fields>
        <fullName>Circuit_Label__c</fullName>
        <description>Human-readable circuit label (e.g., 9th Circuit, D.C. Circuit, 4th Circuit).</description>
        <label>Circuit Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Key__c</fullName>
        <description>Short key matched against Program.nepa_circuit__c (e.g., 9th, DC, 4th).</description>
        <label>Circuit Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <description>Number of PermitTEC litigation cases in this circuit.</description>
        <label>Case Count</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Risk_Points__c</fullName>
        <description>Points added to composite litigation risk score for this circuit. Scale: 0-20 points. SubscriberControlled so agencies can tune weights without a package update.</description>
        <label>Risk Points</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>

    <!-- Mandate 2: EO 14270 temporal versioning -->
    <fields>
        <fullName>Effective_Start_Date__c</fullName>
        <description>Date this record version becomes effective. Flows compare inp_EvaluationDate (= nepa_start_date__c on the IA) against this: only records where Effective_Start_Date__c IS NULL OR &lt;= EvaluationDate are returned. Null = effective from the beginning of time.</description>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sunset_Date__c</fullName>
        <description>Date after which this record version is no longer effective (EO 14270 sunset compliance). Flows filter: Sunset_Date__c IS NULL OR &gt;= EvaluationDate. Null = no sunset.</description>
        <label>Sunset Date</label>
        <type>Date</type>
    </fields>
</CustomObject>